# django-api-gateway

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  The Cat API.postman_collection.json  WORKFLOW.md  add_cat_api.py  cat_demo.html  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  serve_demo.py  test_cat_api.py
.github/workflows/: django-tests.yml
api_gateway_project/: asgi.py  settings.py  urls.py  wsgi.py
cat_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cat_api/management/commands/: load_cat_data.py
cat_api/migrations/: 0001_initial.py  0002_catimage_breed.py
cat_api/templates/cat_api/: base.html  breed_detail.html  breeds.html  cat_demo.html  favorites.html  home.html  login_required.html
cat_api/templates/cat_api/partials/: breed_detail.html  breed_images.html  random_cats.html
gateway/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
gateway/management/commands/: create_catapi_data.py  create_test_data.py
gateway/migrations/: 0001_initial.py
gateway/templates/gateway/: base.html  dashboard.html  logs.html  rule_form.html  rules.html
gateway/tests/: test_ajax_views.py  test_api_endpoint_viewset.py  test_api_log_viewset.py  test_domain_viewset.py  test_health_check.py  test_management_commands.py  test_middleware.py  test_thecatapi.py  test_transformation_viewsets.py  test_web_interface_views.py  test_web_views.py
google_sheets/: README.md  admin.py  api.md  apps.py  models.md  models.py  requirements.txt  serializers.py  urls.py  views.py
google_sheets/migrations/: 0001_initial.py
google_sheets/templates/google_sheets/: base.html  sheet_detail.html  sheet_list.html
google_sheets/templatetags/: sheet_tags.py
