[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-api-gateway"
version = "0.1.1"
description = "API Gateway with Django and IFTTT-like interface"
readme = "README.md"
authors = [
    { name = "Peter Rosemann", email = "dkdndes@gmail.com" },
    { name = "OpenHands",     email = "openhands@all-hands.dev" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
]
requires-python = ">=3.8"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "requests>=2.28.0",
    "coreapi>=2.3.3",
    "pyyaml>=6.0",
]

keywords = ["django", "api-gateway", "ifttt", "webhooks"]

[project.urls]
Homepage     = "https://github.com/insightgateway/django-api-gateway"
Bug Tracker  = "https://github.com/insightgateway/django-api-gateway/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-django"]
docs = ["mkdocs", "mkdocstrings"]
